Fixing up nav spacing for Columbia SSOL on mobile and smaller screen sizes

--- a/css/columbia-ssol.css
+++ b/css/columbia-ssol.css
@@ -616,10 +616,12 @@
   
   @media screen and (max-width: 479px) {
     .nav-2 {
-      margin-right: 20px;
-      margin-left: 20px;
+      margin-right: 0px;
+      margin-left: 0px;
     }
     .navigation-3 {
+      margin-right: 20px;
+      margin-left: 20px;
       padding-right: 0px;
       padding-left: 0px;
     }
